Fixes on docs
